<resources>
    <string name="app_name">ItemSwap</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register"><u>Don\'t have an account? Sign up.</u></string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone number</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="add_advertisement">Add advertisement</string>
    <string name="addPhotos">Add photos</string>
    <string name="title">Title</string>
    <string name="chooseCategory">Choose category</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
    <string name="localization">Localization</string>
    <string name="add">Add</string>
    <string name="choose_condition">Choose condition</string>
    <string name="send_message">Send Message</string>
    <string name="follow">Follow</string>
    <string name="call">Call</string>
    <string name="search_advertisements">Search advertisements</string>
    <string name="search">Search</string>
    <string name="hint_text">Hint</string>
    <string name="errorNameRequired">Name required</string>
    <string name="errorSurnameRequired">Surname required</string>
    <string name="errorUsernameRequired">Username required</string>
    <string name="errorPhoneRequired">Phone number required</string>
    <string name="errorEmailRequired">Email required</string>
    <string name="errorPasswordRequired">Password required</string>
    <string name="errorConfirmPasswordRequired">Confirm password required</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="signUp">Sign up</string>
    <string name="registerTitle">Register</string>
    <string name="addAdvertisement">Add advertisement</string>
    <string name="condition">Condition</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="postalCode">Postal code</string>
    <string name="followButton">Follow Button</string>
    <string name="typeMessage">Type a message</string>
    <string name="send">Send</string>
    <string name="sendMessage">Send message</string>
    <string name="edit">Edit</string>
    <string name="editAdvertisement">Edit advertisement</string>
    <string name="save">Save</string>
    <string name="noAdvertisements">No advertisements available</string>
    <string name="noMessages">No messages available</string>
    <string name="changePassword">Change password</string>
    <string name="updateAccountTitle">Update account information</string>
    <string name="trade">What do u want to trade for?</string>
    <string name="wantToTradeFor">Want to trade for:</string>
    <string name="showAll">show all</string>
</resources>